--- a/build.gradle
+++ b/build.gradle
@@ -57,8 +57,19 @@ dependencies {
 	implementation group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
 	implementation 'com.github.shin285:KOMORAN:3.3.9'
 
+	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
+	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+
+
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+
+clean {
+	delete file('src/main/generated')
 }
